tests/TypingSpec/valid/prog/untyped-lam-call-2.algst
add : Int -> Int -> Int
add x y = (\a b  -> a + b) x y
