tests/TypingSpec/invalid/prog/fun-align-3.algst
foo : Int -> Int
foo [t] = \(x:Int) -> x
